force-app/main/default/objects/Volunteer_Event__c/Volunteer_Event__c.object-meta.xml
<CustomObject>
    <description>Pre-defined activities with volunteer involvements at a specific host location.</description>
    <label>Volunteer Event</label>
    <nameField>
        <displayFormat>VE-{000000}</displayFormat>
        <label>Volunteer Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>