force-app/main/default/objects/Volunteer_Event__c/fields/Accepted_Guests__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Guests__c</fullName>
    <description>Count of Event Registrants where (Registrant Status = Accepted and Cvent Guest ID is not null)</description>
    <label>Accepted Guests</label>
    <summaryFilterItems>
        <field>Event_Registrant__c.Registrant_Status__c</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Event_Registrant__c.Cvent_Guest_ID__c</field>
        <operation>notEqual</operation>
        <value>&quot;&quot;</value>
    </summaryFilterItems>
    <summaryForeignKey>Event_Registrant__c.Volunteer_Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>