force-app/main/default/objects/Volunteer_Event__c/fields/Accepted_Invitees__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Invitees__c</fullName>
    <label>Accepted Invitees</label>
    <summaryFilterItems>
        <field>Event_Registrant__c.Registrant_Status__c</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Event_Registrant__c.Cvent_Guest_ID__c</field>
        <operation>equals</operation>
        <value>&quot;&quot;</value>
    </summaryFilterItems>
    <summaryForeignKey>Event_Registrant__c.Volunteer_Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>