force-app/main/default/objects/Volunteer_Event__c/fields/Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Cancelled__c</fullName>
    <description>Cancelled = count of Event Registrants where (Registrant Status = Cancelled)</description>
    <label>Cancelled</label>
    <summaryFilterItems>
        <field>Event_Registrant__c.Registrant_Status__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Event_Registrant__c.Volunteer_Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>