force-app/main/default/objects/Volunteer_Event__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <description>The max number of attendees for the event.</description>
    <inlineHelpText>The number of registrants allowed to register for an event. If there is no capacity limit for the event, click the checkbox for &#39;Unlimited&#39;.</inlineHelpText>
    <label>AARP Registration Capacity</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>