force-app/main/default/objects/Volunteer_Event__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>Enter information that will be used for internal reference only. This information will not be public-facing or visible to Event Registrants.</inlineHelpText>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>