force-app/main/default/objects/Volunteer_Event__c/fields/Cvent_Event_Code__c.field-meta.xml
<CustomField>
    <fullName>Cvent_Event_Code__c</fullName>
    <label>Cvent Event Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>