force-app/main/default/objects/Volunteer_Event__c/fields/Cvent_Event_ID__c.field-meta.xml
<CustomField>
    <fullName>Cvent_Event_ID__c</fullName>
    <description>Unique identifier for Cvent event records.</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique identifier for Cvent event records.</inlineHelpText>
    <label>Cvent Event ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>