force-app/main/default/objects/Volunteer_Event__c/fields/Cvent_Event_Status__c.field-meta.xml
<CustomField>
    <fullName>Cvent_Event_Status__c</fullName>
    <label>Cvent Event Status</label>
    <type>TextArea</type>
</CustomField>