force-app/main/default/objects/Volunteer_Event__c/fields/Cvent_Template__c.field-meta.xml
<CustomField>
    <fullName>Cvent_Template__c</fullName>
    <description>Populated from CVENT Or email template object if volunteer event template was created in  portal</description>
    <label>Cvent Template</label>
    <type>TextArea</type>
</CustomField>