force-app/main/default/objects/Volunteer_Event__c/fields/Cvent_Update_Errors__c.field-meta.xml
<CustomField>
    <fullName>Cvent_Update_Errors__c</fullName>
    <description>Errors encountered during Cvent update process.</description>
    <inlineHelpText>Errors encountered during Cvent update process.</inlineHelpText>
    <label>Cvent Update Errors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>