force-app/main/default/objects/Volunteer_Event__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Program event description</description>
    <inlineHelpText>If left blank, the Description from the Cvent Event Template will be populated. If information is entered here, it will override anything from the Event Template and display to the public.</inlineHelpText>
    <label>Description</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>