force-app/main/default/objects/Volunteer_Event__c/fields/Display_to_Public__c.field-meta.xml
<CustomField>
    <fullName>Display_to_Public__c</fullName>
    <inlineHelpText>When creating events, if &quot;Display to Public&quot; is set to &quot;Yes,&quot; the event will automatically post to any related local town event pages in Cvent.</inlineHelpText>
    <label>Display to Public</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>