force-app/main/default/objects/Volunteer_Event__c/fields/Enterprise_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Program_Name__c</fullName>
    <description>To store the Branding_Descriptor__c of the linked Program__c so that it can be mapped to Cvent.</description>
    <label>Enterprise Program Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>