force-app/main/default/objects/Volunteer_Event__c/fields/Event_Cancellation_Needed__c.field-meta.xml
<CustomField>
    <fullName>Event_Cancellation_Needed__c</fullName>
    <description>Allows a volunteer to indicate in Portal that an event needs to be cancelled by a Cvent administrator.</description>
    <inlineHelpText>Select &quot;Yes&quot; if the event needs to be cancelled; include a note in the Comments field explaining why the event was cancelled. Otherwise, select &quot;No.&quot;</inlineHelpText>
    <label>Event Cancellation Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>