force-app/main/default/objects/Volunteer_Event__c/fields/Event_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Event_Contact_Phone__c</fullName>
    <description>Program Event&#39;s point of contact phone number.</description>
    <inlineHelpText>Enter this event&#39;s point of contact phone number.</inlineHelpText>
    <label>Event Contact Phone</label>
    <type>Phone</type>
</CustomField>