force-app/main/default/objects/Volunteer_Event__c/fields/Event_Created_in_Cvent__c.field-meta.xml
<CustomField>
    <fullName>Event_Created_in_Cvent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Event Created in Cvent</label>
    <type>Checkbox</type>
</CustomField>