force-app/main/default/objects/Volunteer_Event__c/fields/Event_End__c.field-meta.xml
<CustomField>
    <fullName>Event_End__c</fullName>
    <description>End date and time for this event</description>
    <inlineHelpText>The date and time the event ends.</inlineHelpText>
    <label>Event End</label>
    <type>DateTime</type>
</CustomField>