force-app/main/default/objects/Volunteer_Event__c/fields/Event_End_Text__c.field-meta.xml
<CustomField>
    <fullName>Event_End_Text__c</fullName>
    <label>Event End Converted Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>