force-app/main/default/objects/Volunteer_Event__c/fields/Event_Leader__c.field-meta.xml
<CustomField>
    <fullName>Event_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter the point of contact for the event. This can be the same Contact as the Event Planner. Note: A Contact record is required for this field.</inlineHelpText>
    <label>Event Leader</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>Your search does not meet filter criteria.</errorMessage>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>Non-AARP Volunteer</value>
        </filterItems>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>AARP Volunteer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Volunteer Events</relationshipLabel>
    <relationshipName>Volunteer_Events</relationshipName>
    <type>Lookup</type>
</CustomField>