force-app/main/default/objects/Volunteer_Event__c/fields/Event_Leader_Email__c.field-meta.xml
<CustomField>
    <fullName>Event_Leader_Email__c</fullName>
    <label>Event Leader Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>