force-app/main/default/objects/Volunteer_Event__c/fields/Event_Leader_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Event_Leader_FirstName__c</fullName>
    <formula>Event_Leader__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Leader First Name</label>
    <type>Text</type>
</CustomField>