force-app/main/default/objects/Volunteer_Event__c/fields/Event_Leader_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Leader_Full_Name__c</fullName>
    <formula>Event_Leader__r.Full_Name__c</formula>
    <label>Event Leader Full Name</label>
    <type>Text</type>
</CustomField>