force-app/main/default/objects/Volunteer_Event__c/fields/Event_Leader_LastName__c.field-meta.xml
<CustomField>
    <fullName>Event_Leader_LastName__c</fullName>
    <formula>Event_Leader__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Leader Last Name</label>
    <type>Text</type>
</CustomField>