force-app/main/default/objects/Volunteer_Event__c/fields/Event_Location_Address__c.field-meta.xml
<CustomField>
    <fullName>Event_Location_Address__c</fullName>
    <description>Host location&#39;s address</description>
    <formula>Host_Location__r.Address_Line_1__c &amp; &quot;, &quot; &amp;
 Host_Location__r.Address_Line_2__c &amp; &quot;, &quot; &amp; 
 Host_Location__r.Address_Line_3__c</formula>
    <label>Event Location Address</label>
    <type>Text</type>
</CustomField>