force-app/main/default/objects/Volunteer_Event__c/fields/Event_Location_Address_Line1__c.field-meta.xml
<CustomField>
    <fullName>Event_Location_Address_Line1__c</fullName>
    <description>Host location&#39;s address</description>
    <formula>Host_Location__r.Address_Line_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Line 1</label>
    <type>Text</type>
</CustomField>