force-app/main/default/objects/Volunteer_Event__c/fields/Event_Location_Address_Line2__c.field-meta.xml
<CustomField>
    <fullName>Event_Location_Address_Line2__c</fullName>
    <formula>Host_Location__r.Address_Line_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Line 2</label>
    <type>Text</type>
</CustomField>