force-app/main/default/objects/Volunteer_Event__c/fields/Event_Location_City__c.field-meta.xml
<CustomField>
    <fullName>Event_Location_City__c</fullName>
    <description>Host location&#39;s city</description>
    <formula>Host_Location__r.City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City</label>
    <type>Text</type>
</CustomField>