force-app/main/default/objects/Volunteer_Event__c/fields/Event_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Location_Name__c</fullName>
    <formula>Host_Location__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Name</label>
    <type>Text</type>
</CustomField>