force-app/main/default/objects/Volunteer_Event__c/fields/Event_Location_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Event_Location_Postal_Code__c</fullName>
    <description>Host location&#39;s postal code</description>
    <formula>Host_Location__r.Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Postal Code</label>
    <type>Text</type>
</CustomField>