force-app/main/default/objects/Volunteer_Event__c/fields/Event_Location_State__c.field-meta.xml
<CustomField>
    <fullName>Event_Location_State__c</fullName>
    <description>Host location&#39;s state</description>
    <formula>TEXT( Host_Location__r.State_Territory__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State</label>
    <type>Text</type>
</CustomField>