force-app/main/default/objects/Volunteer_Event__c/fields/Event_Planner__c.field-meta.xml
<CustomField>
    <fullName>Event_Planner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the public-facing email address for guests registering for the event to contact, if needed. Note: An event planner email record is required for this field.</inlineHelpText>
    <label>Event Planner Email</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Event_Planner__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Event_Planner__c</referenceTo>
    <relationshipLabel>Volunteer Events</relationshipLabel>
    <relationshipName>Volunteer_Events</relationshipName>
    <type>Lookup</type>
</CustomField>