force-app/main/default/objects/Volunteer_Event__c/fields/Event_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Event_Sponsor__c</fullName>
    <inlineHelpText>Where applicable, enter the third-party vendor supporting the event.</inlineHelpText>
    <label>Event Sponsor</label>
    <type>TextArea</type>
</CustomField>