force-app/main/default/objects/Volunteer_Event__c/fields/Event_Start__c.field-meta.xml
<CustomField>
    <fullName>Event_Start__c</fullName>
    <description>Start date and time of the event</description>
    <inlineHelpText>The date and time the event begins.</inlineHelpText>
    <label>Event Start</label>
    <type>DateTime</type>
</CustomField>