force-app/main/default/objects/Volunteer_Event__c/fields/Event_Start_Text__c.field-meta.xml
<CustomField>
    <fullName>Event_Start_Text__c</fullName>
    <label>Event Start Converted Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>