force-app/main/default/objects/Volunteer_Event__c/fields/Event_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Start_Time__c</fullName>
    <label>Event Start Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>12:00 AM</fullName>
            </value>
            <value>
                <fullName>12:15 AM</fullName>
            </value>
            <value>
                <fullName>12:30 AM</fullName>
            </value>
            <value>
                <fullName>12:45 AM</fullName>
            </value>
            <value>
                <fullName>1:00 AM</fullName>
            </value>
            <value>
                <fullName>1:15 AM</fullName>
            </value>
            <value>
                <fullName>1:30 AM</fullName>
            </value>
            <value>
                <fullName>1:45 AM</fullName>
            </value>
            <value>
                <fullName>2:00 AM</fullName>
            </value>
            <value>
                <fullName>2:15 AM</fullName>
            </value>
            <value>
                <fullName>2:30 AM</fullName>
            </value>
            <value>
                <fullName>2:45 AM</fullName>
            </value>
            <value>
                <fullName>3:00 AM</fullName>
            </value>
            <value>
                <fullName>3:15 AM</fullName>
            </value>
            <value>
                <fullName>3:30 AM</fullName>
            </value>
            <value>
                <fullName>3:45 AM</fullName>
            </value>
            <value>
                <fullName>4:00 AM</fullName>
            </value>
            <value>
                <fullName>4:15 AM</fullName>
            </value>
            <value>
                <fullName>4:30 AM</fullName>
            </value>
            <value>
                <fullName>4:45 AM</fullName>
            </value>
            <value>
                <fullName>5:00 AM</fullName>
            </value>
            <value>
                <fullName>5:15 AM</fullName>
            </value>
            <value>
                <fullName>5:30 AM</fullName>
            </value>
            <value>
                <fullName>5:45 AM</fullName>
            </value>
            <value>
                <fullName>6:00 AM</fullName>
            </value>
            <value>
                <fullName>6:15 AM</fullName>
            </value>
            <value>
                <fullName>6:30 AM</fullName>
            </value>
            <value>
                <fullName>6:45 AM</fullName>
            </value>
            <value>
                <fullName>7:00 AM</fullName>
            </value>
            <value>
                <fullName>7:15 AM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>