force-app/main/default/objects/Volunteer_Event__c/fields/Event_Template__c.field-meta.xml
<CustomField>
    <fullName>Event_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Event_Template__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Event_Template__c</referenceTo>
    <relationshipLabel>Volunteer Events</relationshipLabel>
    <relationshipName>Volunteer_Events</relationshipName>
    <type>Lookup</type>
</CustomField>