force-app/main/default/objects/Volunteer_Event__c/fields/Host_Location__c.field-meta.xml
<CustomField>
    <fullName>Host_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to Host Location object.</description>
    <inlineHelpText>The host site for the event. This field is required for Driver Safety. Note: A Location record is required for this field.</inlineHelpText>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Volunteer Events</relationshipLabel>
    <relationshipName>Program_Events</relationshipName>
    <type>Lookup</type>
</CustomField>