force-app/main/default/objects/Volunteer_Event__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <defaultValue>&quot;English&quot;</defaultValue>
    <inlineHelpText>Select the host language for the event.</inlineHelpText>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
                <default>true</default>
                <label>English</label>
            </value>
            <value>
                <fullName>Chinese - Mandarin</fullName>
            </value>
            <value>
                <fullName>Chinese - Traditional</fullName>
            </value>
            <value>
                <fullName>Korean</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Vietnamese</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>