force-app/main/default/objects/Volunteer_Event__c/fields/Last_Cvent_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Cvent_Update__c</fullName>
    <description>Last update from Cvent.</description>
    <label>Last Cvent Update</label>
    <type>DateTime</type>
</CustomField>