force-app/main/default/objects/Volunteer_Event__c/fields/LastNonIntegratorModDate__c.field-meta.xml
<CustomField>
    <fullName>LastNonIntegratorModDate__c</fullName>
    <label>LastNonIntegratorModDate</label>
    <type>DateTime</type>
</CustomField>