force-app/main/default/objects/Volunteer_Event__c/fields/Location_Type__c.field-meta.xml
<CustomField>
    <fullName>Location_Type__c</fullName>
    <description>Location ID</description>
    <formula>text(Host_Location__r.Location_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Type</label>
    <type>Text</type>
</CustomField>