force-app/main/default/objects/Volunteer_Event__c/fields/Matching_Event_Leader_Not_Found__c.field-meta.xml
<CustomField>
    <fullName>Matching_Event_Leader_Not_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkboxes will be checked when the event is created/updated in Cvent and matching lookups are not found in Portal.</description>
    <label>Matching Event Leader Not Found</label>
    <type>Checkbox</type>
</CustomField>