force-app/main/default/objects/Volunteer_Event__c/fields/Matching_Event_Planner_Not_Found__c.field-meta.xml
<CustomField>
    <fullName>Matching_Event_Planner_Not_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Matching Event Planner Not Found</label>
    <type>Checkbox</type>
</CustomField>