force-app/main/default/objects/Volunteer_Event__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <inlineHelpText>Enter any additional event information for Event Registrants. Note: this field is public-facing and will append to the Event Description. (Example: parking available on-site.)</inlineHelpText>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>