force-app/main/default/objects/Volunteer_Event__c/fields/Participants__c.field-meta.xml
<CustomField>
    <fullName>Participants__c</fullName>
    <description>Count of Event Registrants where (Participant Status = Yes)</description>
    <label>Participants</label>
    <summaryFilterItems>
        <field>Event_Registrant__c.Participant_Status__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </summaryFilterItems>
    <summaryForeignKey>Event_Registrant__c.Volunteer_Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>