force-app/main/default/objects/Volunteer_Event__c/fields/Percentage_Event_Filled__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Event_Filled__c</fullName>
    <formula>Total_Accepted__c  /  Capacity__c</formula>
    <label>Percentage Event Filled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>