force-app/main/default/objects/Volunteer_Event__c/fields/Planner_Email__c.field-meta.xml
<CustomField>
    <fullName>Planner_Email__c</fullName>
    <description>Program Event&#39;s point of contact email address.</description>
    <label>Cvent Planner Email</label>
    <type>Email</type>
</CustomField>