force-app/main/default/objects/Volunteer_Event__c/fields/Planner_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Planner_FirstName__c</fullName>
    <description>Program Event&#39;s point of contact name.</description>
    <inlineHelpText>Enter the first name of the public-facing Contact person for guests registering for the event. This can be the same Contact as the Event Leader.</inlineHelpText>
    <label>Planner First Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>