force-app/main/default/objects/Volunteer_Event__c/fields/Planner_LastName__c.field-meta.xml
<CustomField>
    <fullName>Planner_LastName__c</fullName>
    <inlineHelpText>Enter the last name of the of the public-facing Contact person for guests registering for the Event. This can be the same Contact as the Event Leader.</inlineHelpText>
    <label>Planner Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>