force-app/main/default/objects/Volunteer_Event__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Indicates program associated with this event</description>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Volunteer Events</relationshipLabel>
    <relationshipName>Volunteer_Events</relationshipName>
    <type>Lookup</type>
</CustomField>