force-app/main/default/objects/Volunteer_Event__c/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <description>Stores the program name. This is used for trigger logic to determine a unique program to associate within the Program__c lookup.</description>
    <label>Program Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>