force-app/main/default/objects/Volunteer_Event__c/fields/Registrant_Checklist_URL__c.field-meta.xml
<CustomField>
    <fullName>Registrant_Checklist_URL__c</fullName>
    <label>Registrant Checklist URL</label>
    <type>Url</type>
</CustomField>