force-app/main/default/objects/Volunteer_Event__c/fields/Registration_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Registration_Deadline__c</fullName>
    <inlineHelpText>The date and time designated to close registration for an event; this date needs to be on or before the Event End date and time.</inlineHelpText>
    <label>Registration Deadline</label>
    <type>DateTime</type>
</CustomField>