force-app/main/default/objects/Volunteer_Event__c/fields/Registration_Deadline_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Deadline_Date__c</fullName>
    <label>Registration Deadline Date</label>
    <type>Date</type>
</CustomField>