force-app/main/default/objects/Volunteer_Event__c/fields/Registration_Deadline_Text__c.field-meta.xml
<CustomField>
    <fullName>Registration_Deadline_Text__c</fullName>
    <label>Registration Deadline Converted Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>